--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,8 +7,12 @@
     src: url('FONTS/Sanctuary/Sanctuary.ttf');
 }
 
-nav{
-    background-color: lightblue;
+@font-face {
+    font-family: doves;
+    src: url('FONTS/two-turtle-doves/doves.ttf');
+}
+
+nav{ 
     position: fixed; top: 0; left: 0; right: 0;
     width: 100%;
     height: 100px;
@@ -16,7 +20,8 @@ nav{
     
     h1{
         text-align: center;
-        font-family: sanctuary;
+        font-family: doves;
+        color: white;
     }
 
     .menu{
@@ -24,24 +29,27 @@ nav{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        font-family: sanctuary;
+        font-family: doves;
 
         li{
+            font-size: 200%;
             a, a:visited{
                 text-decoration: none;
-                color: black;
+                color: white;
             }
 
             a:hover{
-                color:white;
+                color:lightcoral;
             }
-            
         }
     }
 }
 
+body{
+    background-color: rgb(48, 51, 54);
+}
+
 .header{
-    background-color: black;
     height: 500px;
     margin-top: 100px;
     width: 100%;
